@@ -15,33 +15,49 @@
 Requirement
 JDK  21
 
-## Getting started in HTTP Mode
-- Export maven options <br>
-  `export MAVEN_OPTS="--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED"`
-- Create a temporary directory for warehouse <br>
-  `mkdir /tmp/my-warehouse`
-- Start the server <br>
-  `cd dazzleduck-sql-http && ../mvnw clean compile  exec:java -Dexec.mainClass="io.dazzleduck.sql.http.server.Main" -Dexec.args="--conf warehousePath=/tmp/my-warehouse"`
-- On a separate terminal run a sql on server with
-```
-URL="http://localhost:8080/query?q=select%201"
-SQL="INSTALL arrow FROM community; LOAD arrow; FROM read_arrow('/dev/stdin') SELECT count(*);"
-curl -s "$URL" | duckdb -c "$SQL"
-```
+## Getting started with Docker
+- Build the docker image.
+  `./mvnw clean package -DskipTests jib:dockerBuild`
+- Start the container with `example/data` mounted to the container
+  ``` 
+  docker run -ti -v "$PWD/example/data":/local-data -p 59307:59307 -p 8080:8080 flight-sql-duckdb --conf useEncryption=false --conf warehouse=/data/warehouse
+  Warehouse Path :/data/warehouse
+  Http Server is up: Listening on URL: http://localhost:8080
+  Flight Server is up: Listening on URI: grpc+tcp://0.0.0.0:59307
+  ```
+- The server is running in arrow flight sql and http mode
+
+### Supported functionality
+1. Database and schema specified as part of connection url. Passed to server as header database and schema.
+2. Fetch size can be specified. It's passed to the server in header fetch_size.
+3. Bulk write to parquet file using bulk upload functionality. Idea is to bulk upload and then add those files to metadata.
+4. Username and Passwords can be specified in application.conf file.
+
+## Connecting to HTTP server.
+
+The server is running on HTTP mode on port 8080 which can used to query DuckDB with POST and GET methods. This will return data in arrow format.<p>
+The return data can itself be queried with duckdb
+- Using HTTP GET to query the server and read the data in duckdb
+  ```
+  URL="http://localhost:8080/query?q=select%201"
+  SQL="INSTALL arrow FROM community; LOAD arrow; FROM read_arrow('/dev/stdin') SELECT count(*);"
+  curl -s "$URL" | duckdb -c "$SQL"
+  ```
+- Using http post
 
 - Writing to Server using post <br>
 ```
 curl -i -X POST 'http://localhost:8080/ingest?path=file1.parquet' \
   -H "Content-Type: application/vnd.apache.arrow.stream" \
-  --data-binary "@example/arrow_ipc/file1.arrow"
+  --data-binary "@dazzleduck-sql-http/example/arrow_ipc/file1.arrow"
 ```
 - Reading the file written above <br>
 ```
-URL="http://localhost:8080/query?q=select%20%2A%20from%20read_parquet%28%27%2Ftmp%2Fmy-warehouse%2Ffile.parquet%27%29%0A"
+URL="http://localhost:8080/query?q=select%20%2A%20from%20read_parquet%28%27%2Fdata%2Fwarehouse%2Ffile.parquet%27%29%0A"
 curl -s "$URL" | duckdb -c "$SQL"
 ```
 
-### Connecting with DuckDB
+## Connecting to Remote HTTP server with Local DuckDB
 ```
 D INSTALL arrow FROM community;
 D LOAD arrow;
@@ -49,45 +65,8 @@ D SELECT * FROM read_arrow(concat('http://localhost:8080/query?q=', url_encode('
 ```
 
 
-### Enabling Authentication.
-Authentication is supported with jwt. Client need to invoke login api with username/password this api would return jwt  token. This jwt token can be used for all subsequent invocation
-- Export maven options<br>
-  ```export MAVEN_OPTS="--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED"```
-- Start the client which will display the result <br>
-  ``cd dazzleduck-sql-http && ../mvnw clean compile  exec:java -Dexec.mainClass="io.dazzleduck.sql.http.server.Main" -Dexec.args="--conf auth=jwt"``
-- Get the jwt token with login <br>
- ```curl -X POST 'http://localhost:8080/login' -H "Content-Type: application/json" -d '{"username": "admin", "password" : "admin"}'```
-- Invoke api with jwt token
-```
-URL="http://localhost:8080/query?q=select%201"
-curl -H "Authorization': 'Bearer <jwt-token>" -s "$URL"
-```
-- Run the query with jwt token by setting <br>
-```
-INSTALL arrow FROM community; LOAD arrow;
-CREATE SECRET http_auth (
-              TYPE http,
-              EXTRA_HTTP_HEADERS MAP {
-                 'Authorization': 'Bearer <jwt-token>'
-                 }
-              );
-SELECT * FROM read_arrow(concat('http://localhost:8080/query?q=', url_encode('select 1, 2, 3')));
-```
-
-## Getting started with Docker in Arrow GRPC Mode
-- Build the docker image with
-  `./mvnw clean package -DskipTests jib:dockerBuild`
-- Start the container with `example/data` mounted to the container
-  ` docker run -ti -v "$PWD/example/data":/data -p 59307:59307  flight-sql-duckdb --conf useEncryption=false`
-
-### Connecting to the server via JDBC
+## Connecting to the flight server via Flight JDBC
 Download the [Apache Arrow Flight SQL JDBC driver](https://search.maven.org/search?q=a:flight-sql-jdbc-driver)
-
-### Supported functionality
-1. Database and schema specified as part of connection url. Passed to server as header database and schema.
-2. Fetch size can be specified. It's passed to the server in header fetch_size.
-3. Bulk write to parquet file using bulk upload functionality. Idea is to bulk upload and then add those files to metadata.
-4. Username and Passwords can be specified in application.conf file.
 
 You can then use the JDBC driver to connect from your host computer to the locally running Docker Flight SQL server with this JDBC string (change the password value to match the value specified for the SQLFLITE_PASSWORD environment variable if you changed it from the example above):
 ```bash
@@ -98,7 +77,7 @@ For instructions on setting up the JDBC driver in popular Database IDE tool: [DB
 
 **Note** - if you stop/restart the Flight SQL Docker container, and attempt to connect via JDBC with the same password - you could get error: "Invalid bearer token provided. Detail: Unauthenticated".  This is because the client JDBC driver caches the bearer token signed with the previous instance's secret key.  Just change the password in the new container by changing the "SQLFLITE_PASSWORD" env var setting - and then use that to connect via JDBC.
 
-### Connecting to the server via the new [ADBC Python Flight SQL driver](https://pypi.org/project/adbc-driver-flightsql/)
+## Connecting to the flight server via the new [ADBC Python Flight SQL driver](https://pypi.org/project/adbc-driver-flightsql/)
 
 You can now use the new Apache Arrow Python ADBC Flight SQL driver to query the Flight SQL server.  ADBC offers performance advantages over JDBC - because it minimizes serialization/deserialization, and data stays in columnar format at all phases.
 
@@ -142,8 +121,36 @@ with sqlflite.connect(uri="grpc+tls://localhost:59307",
 You should see results:
 
 
-### Connecting via [Ibis](https://ibis-project.org)
+## Connecting via [Ibis](https://ibis-project.org)
 See: https://github.com/ibis-project/ibis-sqlflite
 
-### Connecting via [SQLAlchemy](https://www.sqlalchemy.org)
+## Connecting via [SQLAlchemy](https://www.sqlalchemy.org)
 See: https://github.com/prmoore77/sqlalchemy-sqlflite-adbc-dialect
+
+
+
+
+## Enabling Authentication in HTTP Mode.
+Authentication is supported with jwt. Client need to invoke login api with username/password this api would return jwt  token. This jwt token can be used for all subsequent invocation
+- Run the server with authentication enabled 
+  `docker run -ti -v "$PWD/example/data":/local-data -p 59307:59307 -p 8080:8080 flight-sql-duckdb --conf useEncryption=false --conf warehouse=/data/warehouse --conf http.authentication=jwt`
+- Get the jwt token with login <br>
+ ```curl -X POST 'http://localhost:8080/login' -H "Content-Type: application/json" -d '{"username": "admin", "password" : "admin"}'```
+- Invoke api with jwt token
+```
+URL="http://localhost:8080/query?q=select%201"
+curl -H "Authorization': 'Bearer <jwt-token>" -s "$URL"
+```
+- Run the query with jwt token by setting <br>
+```
+INSTALL arrow FROM community; LOAD arrow;
+CREATE SECRET http_auth (
+              TYPE http,
+              EXTRA_HTTP_HEADERS MAP {
+                 'Authorization': 'Bearer <jwt-token>'
+                 }
+              );
+SELECT * FROM read_arrow(concat('http://localhost:8080/query?q=', url_encode('select 1, 2, 3')));
+```
+
+
